# Patina

./: Cargo.toml  README.md
crates/artemis-core/: Cargo.toml
crates/artemis-core/src/executors/: mod.rs
src/: main.rs  utils.rs
src/bindings/: mod.rs  pos_router.rs
src/collectors/: gmx_position_collector.rs  mod.rs
src/strategies/: gmx_copy_catto.rs  mod.rs
