[package]
name = "patina"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

ethers = { version = "1.0.0", features = [ "abigen", "ws", "rustls" ] }
tokio = { version = "1", features = ["full"] }
eyre = { version = "0.6" }
dotenv = "0.15.0"
hex = "0.4"
