[package]
name = "patina"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"


[dependencies]
artemis-core = { git = "https://github.com/paradigmxyz/artemis"}
ethers = { version = "2", features = ["ws", "rustls"]}
tokio = { version = "1.18", features = ["full"] }
dotenv = "0.15.0"
async-trait = "0.1.64"
futures = "0.3.27"
anyhow = "1.0.70"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
clap = { version = "4.2.5", features = ["derive"] }
futures-util = "0.3.28"
